Correcting vertical align to conteudo, third attempt.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ a:hover {
 
 /****** ajustando a centralização do conteudo ******/
 #conteudo p {
-	margin-bottom: 6em;
+	margin-bottom: 8em;
 }
 
 header {
